// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view of button 1`] = `
<DocumentFragment>
  <button
    class="button default-button "
  >
    test
  </button>
</DocumentFragment>
`;

exports[`Test view of button with children 1`] = `
<DocumentFragment>
  <button
    class="button default-button "
  >
    Child
  </button>
</DocumentFragment>
`;
